--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BrainWave.io</title>
-    <link rel="stylesheet" href="src/assets/vendors/swiper/swiper-bundle.min.css">
+    <title>Vite + React</title>
+    <link rel="stylesheet" href="vendors/swiper/swiper-bundle.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&amp;family=Rubik:ital,wght@0,300..900;1,300..900family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
     <link href="src/assets/css/theme.css" rel="stylesheet" id="style-default">
     <link href="src/assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
     <link href="src/assets/css/user.min.css" rel="stylesheet" id="user-style-default">
@@ -18,15 +18,15 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     
-    <script src="src/assets/vendors/popper/popper.min.js"></script>
-    <script src="src/assets/vendors/bootstrap/bootstrap.min.js"></script> 
-    <script src="src/assets/vendors/is/is.min.js"></script>
-    <script src="src/assets/vendors/countup/countUp.umd.js"></script>
-    <script src="src/assets/vendors/swiper/swiper-bundle.min.js"></script>
-    <script src="src/assets/vendors/lodash/lodash.min.js"></script>
+    <script src="src/vendors/popper/popper.min.js"></script>
+    <script src="src/vendors/bootstrap/bootstrap.min.js"></script> 
+    <script src="src/vendors/is/is.min.js"></script>
+    <script src="src/vendors/countup/countUp.umd.js"></script>
+    <script src="src/vendors/swiper/swiper-bundle.min.js"></script>
+    <script src="src/vendors/lodash/lodash.min.js"></script>
+    <script src="src/https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="src/assets/js/theme.js"></script>
-    
-    <!-- Malicious daw sabi ni Prince -->
-    <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script> -->
+
+
   </body>
 </html>
